--- a/views/index.html
+++ b/views/index.html
@@ -5,15 +5,14 @@
   <meta name="HandheldFriendly" content="true">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <link rel="stylesheet" type="text/css" href="lib/normalize.css">
-  <link rel="stylesheet" type="text/css" href="index.css">
+  <link rel="stylesheet" type="text/css" href="lib/reset/reset.css">
   <title>dim Template Project</title>
 </head>
 <body>
-  <script src="lib/dim.js"></script>
-  <script>
-    require.config(__FRAMEWORK_CONFIG__);
-    require.async('boot', function (boot) { boot() });
-  </script>
+  <div id="page"></div>
+
+  <script src="lib/lib.js"></script>
+  <script src="boot.js?__inline"></script>
+  
 </body>
 </html>
