--- a/components/page-index/page-index.handlebars
+++ b/components/page-index/page-index.handlebars
@@ -1,5 +1,5 @@
-<div id="content">
-	<div class="recommend-bd" id="J-recommend-shop" data-spm="recommend">
-		
-	</div>
+<!-- 面料求购头部 -->
+<div id="buy-header" class="tag">
+    
 </div>
+<!-- /面料求购头部 -->
